--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "functools": "1.x"
   },
   "scripts":{
-    "test": "./node_modules/.bin/highkick test/main.js"
+    "test": "make test"
   }
 }
